# godot_sqlite

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt  run_tests.py
libgodot_sqlite3/: SQLite.gdns  SQLiteConstants.gd  SQLiteStatement.gdns  libgodot_sqlite3.gdnlib
libgodot_sqlite3/unit_tests/: 00_load_module.gd  01_res_db_open_db.gd  02_user_db_open_create_db.gd  03_fs_db_open_create_db.gd  11_res_db_query_stmt.gd  12_res_db_query_exec.gd  20_user_db_create_insert_read.gd  21_user_db_open_read.gd  22_user_db_create_bind_read.gd  23_user_db_create_collate.gd  24_user_db_drop_delete.gd  30_fs_db_create_insert.gd  31_fs_db_open_read.gd  32_fs_db_bind_param.gd  40_func_db_open_close.gd  41_func_db_prepare.gd  42_func_db_collation.gd  43_func_db_exec.gd  44_func_stmt_base.gd  45_func_stmt_bind.gd  46_func_stmt_belongs.gd  47_func_stmt_sql.gd
libgodot_sqlite3/unit_tests/data/: temp.db.bak
src/: godot_sqlite3.c
src/sqlite3/: sqlite3.h
